k8s/users/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - image: bogdanzo/users:1.0
          imagePullPolicy: Always
          name: users
          ports:
            - containerPort: 8080
